[package]
name = "btc-utxo-dump-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
bitcoin-bech32 = "0.13"
bs58 = "0.5"
clap = { version = "4.5", features = ["derive"] }
csv = "1.3"
db-key = "0.0.5"
hex = "0.4"
leveldb = { version = "0.8", default-features = false }
ripemd = "0.1"
secp256k1 = "0.30"
sha2 = "0.10"